# pachamama-journeys

./: podman-compose.yaml  podman-compose.yml
backend/: .gitignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  podman-compose.yml  pyproject.toml  requirements.txt
backend/blog/: models.py  urls.py  views.py
backend/category/: models.py
backend/core/: functions.py
backend/server/: settings.py  urls.py
backend/src/: app.module.ts  main.py  main.ts
backend/src/api/v1/: auth.py  blog.py  category.py  tour.py  user.py
backend/src/auth/: jwt.py
backend/src/blog/: blog.controller.ts  blog.module.ts  blog.service.ts
backend/src/blog/dto/: create-blog.dto.ts  update-blog.dto.ts
backend/src/blog/entities/: blog.entity.ts
backend/src/category/: category.module.ts  category.service.ts
backend/src/category/dto/: create-category.dto.ts  update-category.dto.ts
backend/src/category/entities/: category.entity.ts
backend/src/database/: engine.py
backend/src/models/: blog.py  category.py  tour.py  user.py
backend/src/schemas/: blog.py  category.py  token.py  tour.py  user.py
backend/src/services/: auth.py  blog.py  category.py  services.service.ts  tour.py  user.py
backend/src/shared/: enums.py
backend/src/tour/: tour.controller.ts  tour.module.ts  tour.service.ts
backend/src/tour/dto/: create-tour.dto.ts  update-tour.dto.ts
backend/src/tour/entities/: tour.entity.ts
backend/src/utils/enums/: category.enum.ts
backend/tour/: admin.py  models.py  serializers.py  urls.py  views.py
dashboard/: angular.json  package-lock.json  package.json  (+1 more)
(+23 files in other folders)
