[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Cristian Monzon",email = "cristian-02-@live.com"}
]
package-mode = false
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | static
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["static", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["B008"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
black = "^25.1.0"

